@@ -77,7 +77,7 @@
 #include "unix2dos.h"
 #include "querycp.h"
 
-#if defined(WIN32) /* MINGW32 */
+#if defined(WIN32) && !defined(__CYGWIN__) /* MINGW32 */
 #define MSDOS
 #endif
 
@@ -106,14 +106,14 @@
 #define NEED_REMOVE 1
 #endif
 
-#if defined(MSDOS) || defined(__OS2__) /* DJGPP, MINGW32 and OS/2 */
+#if defined(MSDOS) || defined(__CYGWIN__) || defined(__OS2__) /* DJGPP, MINGW32 and OS/2 */
 /* required for setmode() and O_BINARY */
 #include <fcntl.h>
 #include <io.h>
 #endif
 
 
-#if defined(MSDOS) || defined(__OS2__)
+#if defined(MSDOS) || defined(__CYGWIN__) || defined(__OS2__)
   #define R_CNTRL   "rb"
   #define W_CNTRL   "wb"
 #else
@@ -799,7 +799,7 @@ int ConvertUnixToDosStdio(CFlag *ipFlag)
     ipFlag->KeepDate = 0;
     ipFlag->Force = 1;
 
-#ifdef WIN32
+#if defined(WIN32) && !defined(__CYGWIN__)
 
     /* stdin and stdout are by default text streams. We need
      * to set them to binary mode. Otherwise an LF will
@@ -812,7 +812,7 @@ int ConvertUnixToDosStdio(CFlag *ipFlag)
     _setmode(fileno(stdout), O_BINARY);
     _setmode(fileno(stdin), O_BINARY);
     return (ConvertUnixToDos(stdin, stdout, ipFlag));
-#elif defined(MSDOS) || defined(__OS2__)
+#elif defined(MSDOS) || defined(__CYGWIN__) || defined(__OS2__)
     setmode(fileno(stdout), O_BINARY);
     setmode(fileno(stdin), O_BINARY);
     return (ConvertUnixToDos(stdin, stdout, ipFlag));
